# README.md

./: CMakeLists.txt  Calculadora.cpp  Calculadora.h  README.md  main.cpp
3. Manipulação de Objetos e Referências/3.1 Manipulando Dados de um Objeto/: main.cpp
4. Classes e Objetos (equivalente a Structs)/4.1 Sistema de Gerenciamento de Funcionários/: main.cpp
Exercicio_1.1_Calculadora/: CMakeLists.txt
Exercicio_1.2_Palindromo/: main.cpp
Exercicio_1.4_Conversor_Temperatura/: main.cpp
Exercicio_1_Calculadora/: Calculadora.cpp
Exercicio_2_Palindromo/: Palindromo.cpp  Palindromo.h  main.cpp
POO_Lista01/: CMakeLists.txt
POO_Lista01/2_Arrays_Multidimensionais_equivalente_a_Matrizes/2.1 Maior e Menor Elemento em uma Matriz/: main.cpp
POO_Lista01/2_Arrays_Multidimensionais_equivalente_a_Matrizes/2.2 Soma das Diagonais de uma Matriz Quadrada/: main.cpp
POO_Lista01/3_Manipulacao_de_Objetos_e_Referencias/3.2 Trocando Valores entre Objetos (simulado)/: main.cpp
POO_Lista01/4_Classes_Objetos_equivalente_a_Structs/4.2_Agenda_de_Contatos/: main.cpp
POO_Lista01/Exercicio_1.1_Calculadora/: Calculadora.h  main.cpp
POO_Lista01/Exercicio_1.2_Palindromo/: CMakeLists.txt  Palindromo.cpp  Palindromo.h
POO_Lista01/Exercicio_1.3_Fatorial/: main.cpp
POO_Lista02/2.10_Problema_Duracao/: main.cpp
POO_Lista02/2.1_Problema_Terreno/: main.cpp
POO_Lista02/2.2_Problema_Retangulo/: main.cpp
POO_Lista02/2.3_Problema_Idade/: main.cpp
POO_Lista02/2.4_Problema_Soma/: main.cpp
POO_Lista02/2.5_Problema_Troco/: main.cpp
POO_Lista02/2.6_Problema_Circulo/: main.cpp
POO_Lista02/2.7_Problema_Pagamento/: main.cpp
POO_Lista02/2.8_Problema_Consumo/: main.cpp
POO_Lista02/2.9_Problema_Medidas/: main.cpp
POO_Lista03/Problema_Aumento_Salarial/: main.cpp
POO_Lista03/Problema_Conversor_Temperatura/: main.cpp
POO_Lista03/Problema_Cordenada_Cartesianas/: main.cpp
POO_Lista03/Problema_Duracao_Jogo/: main.cpp
POO_Lista03/Problema_Formula_Baskara/: main.cpp
POO_Lista03/Problema_Lancamento_de_Dardo/: main.cpp
POO_Lista03/Problema_Lanchonete/: main.cpp
POO_Lista03/Problema_Medidador_Glicose/: main.cpp
POO_Lista03/Problema_Menor_Tres/: main.cpp
POO_Lista03/Problema_Multiplos/: main.cpp
POO_Lista03/Problema_Notas/: main.cpp
POO_Lista03/Problema_Plano_Telefonia/: main.cpp
POO_Lista03/Problema_Troco_Falta/: main.cpp
